@@ -38,11 +38,13 @@ colour <- c("red", "green", "blue", "yellow")
 qplot(1:4, 1:4, fill = colour, geom = "tile")
 qplot(1:4, 1:4, fill = colour, geom = "tile") + scale_fill_identity()
 
-# To get a legend guide, you also need to supply labels, and specify
-# guide = "legend"
+# To get a legend guide, specify guide = "legend"
+qplot(1:4, 1:4, fill = colour, geom = "tile") +
+  scale_fill_identity(guide = "legend")
+# But you'll typically also need to supply breaks and labels:
 qplot(1:4, 1:4, fill = colour, geom = "tile") +
   scale_fill_identity("trt", labels = letters[1:4], breaks = colour,
-   guide = "legend")
+  guide = "legend")
 
 # cyl scaled to appropriate size
 qplot(mpg, wt, data = mtcars, size = cyl)
